changes in main templates

--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -189,26 +189,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <P class="servghjrfgh">You can have your websites with django framework </p>
 <div class="col-md-6 servghjrfghvice">
 
-<h4>Branding and Identity</h4>
-<P class="ilofgg123">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+<h4>Software development</h4>
+<P class="ilofgg123">Software development services is a complicated process to design an application or software in order to meet a particular business or personal objective, goal or process. This process consists of various stages: Planning, Analysis, Product Design, Development & Implementation, Testing, Maintenance.</p>
 
 </div>
 <div class="col-md-6 servghjrfghvice">
 
 <h4>Graphic Design</h4>
-<P class="ilofgg123">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+<P class="ilofgg123">Graphic design is a craft where professionals create visual content to communicate messages. By applying visual hierarchy and page layout techniques, designers use typography and pictures to meet users' specific needs and focus on the logic of displaying elements in interactive designs, to optimize the user experience.</p>
 
 </div>
 <div class="col-md-6 servghjrfghvice">
 
-<h4>Multimedia Animations</h4>
-<P class="ilofgg123">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+<h4>Machine learning</h4>
+<P class="ilofgg123">Machine Learning (ML) is The science of automate a task using some 
+autonomous bots created by several programming languages
+	(python, C++, Java, R,  LISP ... and many others )
+
+types of ML :
+-Supervised Learning
+-Unsupervised Learning
+-Reinforcement Learning
+
+List of Common Machine Learning Algorithms :
+1. Linear Regression
+2. Logistic Regression
+3. Decision Tree
+4. SVM
+5. Naive Bayes
+6. kNN
+7. K-Means
+8. Random Forest
+9. Dimensionality Reduction Algorithms
+10. Gradient Boosting algorithms
+</p>
 
 </div>
 <div class="col-md-6 servghjrfghvice">
 
-<h4>Packaging Design</h4>
-<P class="ilofgg123">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+<h4>Website development</h4>
+<P class="ilofgg123">Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an intranet (a private network). ... Among Web professionals, "Web development" usually refers to the main non-design aspects of building Web sites: writing markup and coding </p>
 
 </div>
 
@@ -334,7 +354,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!-- Contact Us -->
 <div class="contact" id="contact">
-<form action="#" method="post">
 <div class="container">
 <h3>CONTACT ME</h3>
 <div class="w3l_l">
@@ -355,7 +374,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </form>
 <div class="wrapper">
 <ul class="social-icons icon-circle icon-zoom list-unstyled list-inline"> 
-<li> <a href="#"><i class="fa fa-facebook"></i></a></li> 
+<li> <a href="https://www.facebook.com/profile.php?id=100005930955083"><i class="fa fa-facebook"></i></a></li> 
 <li> <a href="#"><i class="fa fa-linkedin"></i></a></li> 
 <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
